--- a/debian/dde-workspace/control
+++ b/debian/dde-workspace/control
@@ -8,11 +8,11 @@ Build-Depends: debhelper (>= 9),
  golang-dlib-dev,
  golang-gettext-go-dev,
  golang-go,
- libdeepin-webkit-3.0-0, libgail-3-dev, libgstreamer-plugins-base0.10-dev,
+ libdeepin-webkit-3.0-0,
  libgdk-pixbuf2.0-dev,
  libglib2.0-dev,
  libgtk-3-dev,
- liblightdm-gobject-1-dev | liblightdm-gobject-dev,
+ liblightdm-gobject-dev,
  libsqlite3-dev,
  libwebkitgtk-3.0-dev,
  libxtst-dev,
