dde-workspace: Add lightdm to Depends.
* debian/dde-workspace/control (Depends): Ditto.

--- a/debian/dde-workspace/control
+++ b/debian/dde-workspace/control
@@ -38,4 +38,5 @@ Depends: ${shlibs:Depends},
          dde-daemon,
          dde-control-center,
          systemd-shim,
+         lightdm,
 Description: deepin desktop envrionment for Linuxdeepin new desktop environment.
