deepin-store: Change source package name to 'deepin-store'.
* debian/deepin-store/control (Source): Ditto.

--- a/debian/deepin-store/control
+++ b/debian/deepin-store/control
@@ -1,4 +1,4 @@
-Source: deepin-software-center
+Source: deepin-store
 Section: admin
 Priority: optional
 Maintainer:  Li Longyu (Ai Kotoba) <leaeasy@gmail.com>
