add tzdata-l10n to dde-control-center depends.

--- a/debian/dde-control-center/debian/control
+++ b/debian/dde-control-center/debian/control
@@ -28,5 +28,6 @@ Depends: ${shlibs:Depends},
  qml-module-qtqml-models2,
  qml-module-qtmultimedia,
  xkb-data,
+ tzdata-l10n,
 Description: New control center for linux deepin
  New control center for linux deepin
