deepin-translator: Add python-pyqt5.qtquick to Depends.

--- a/debian/deepin-translator/debian/control
+++ b/debian/deepin-translator/debian/control
@@ -20,6 +20,7 @@ Depends: ${shlibs:Depends},
  python-xpyb,
  python-xmltodict,
  xsel,
+ python-pyqt5.qtquick,
  python-deepin-utils,
  python-xlib,
  deepin-qml-widgets
