--- a/debian/dde-control-center/debian/control
+++ b/debian/dde-control-center/debian/control
@@ -27,6 +27,7 @@ Depends: ${shlibs:Depends},
  deepin-qml-widgets,
  qml-module-qtqml-models2,
  qml-module-qtmultimedia,
+ libqt5svg5,
  xkb-data,
  tzdata-l10n,
 Description: New control center for linux deepin
