--- a/debian/deepin-installer/debian/control
+++ b/debian/deepin-installer/debian/control
@@ -28,6 +28,7 @@ Depends: ${shlibs:Depends}, libdeepin-webkit-3.0-0,
  e2fsprogs,
  jfsutils,
  unionfs-fuse,
+ os-prober,
  ntfs-3g,
  reiserfsprogs,
  squashfs-tools,
