--- a/debian/deepin-music/debian/control
+++ b/debian/deepin-music/debian/control
@@ -12,8 +12,8 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
          deepin-ui, python-mutagen, python-gst0.10,
          python-pyquery, python-cddb, python-pycurl,
          python-chardet, python-keybinder,
-         gstreamer0.10-plugins-good
-Suggests: gstreame0.10-plugins-bad-multiverse, python-mmkeys
+         gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad
+Suggests: gstreamer0.10-plugins-bad-multiverse, python-mmkeys
 Description: Awesome music player with brilliant and tweakful UI
  Deepin-UI based, gstreamer front-end, with features likes search music by 
  pinyin,quanpin, colorful lyrics supports, and more powerfull functions you 
