add deepin-compiz to depends.

--- a/debian/startdde/debian/control
+++ b/debian/startdde/debian/control
@@ -20,6 +20,6 @@ Depends: ${shlibs:Depends},
  dbus-x11,
  dde-daemon,
  dde-workspace,
- deepin-wm | compiz,
+ deepin-wm | deepin-compiz | compiz,
 Description: starter of deepin desktop environment
  starter of deepin desktop environment.
