libqt5multimedia5-plugins to dde-control-center
Change-Id: I0380f5f3ea0b1c1a2de5eb920ccdc1519cd4ffc0

--- a/debian/dde-control-center/debian/control
+++ b/debian/dde-control-center/debian/control
@@ -27,6 +27,7 @@ Depends: ${shlibs:Depends},
  deepin-qml-widgets,
  qml-module-qtqml-models2,
  qml-module-qtmultimedia,
+ libqt5multimedia5-plugins,
  libqt5svg5,
  xkb-data,
  tzdata-l10n,
