--- a/debian/deepin-installer/debian/control
+++ b/debian/deepin-installer/debian/control
@@ -12,6 +12,7 @@ Build-Depends: debhelper (>= 8.0.0),
  liblightdm-gobject-dev,
  libparted-dev,
  libsqlite3-dev,
+ dde-go-dbus-factory,
  libwebkitgtk-3.0-dev,
  libxklavier-dev,
  pkg-config,
