add golang-fsnotify-dev to build-deps.
Change-Id: I79201877bafac73282170bbe80e75a70c792538b

--- a/debian/deepin-installer/debian/control
+++ b/debian/deepin-installer/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 8.0.0),
  coffeescript,
  golang-go,
  golang-dlib-dev,
+ golang-fsnotify-dev,
  libdbus-glib-1-dev,
  libdeepin-webkit-3.0-0,
  liblightdm-gobject-dev,
