fix fsnotify deps
Change-Id: I3168369fc577c141d3ddcf6a29bff4d172eb2eba

--- a/debian/dde-daemon/debian/control
+++ b/debian/dde-daemon/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9),
  golang-xgb-dev,
  golang-xgbutil-dev,
  golang-go,
- golang-fsnotify-dev,
+ golang-fsnotify.howeyc-dev,
  golang-go-sqlite3-dev,
  golang-gocheck-dev,
  libmetacity-dev,
