--- a/debian/deepin-mutter/debian/rules
+++ b/debian/deepin-mutter/debian/rules
@@ -6,9 +6,9 @@
 override_dh_auto_configure:
 	./autogen.sh --prefix=/usr \
 		--sysconfdir=/etc \
-		--enable-gtk-doc\
+		--enable-gtk-doc \
 		--disable-schemas-compile \
-		--enable-compile-warnings=minimum \
+		--enable-compile-warnings=minimum
 
 override_dh_strip:
 	dh_strip --dbg-package=deepin-mutter-dbg
