add python-pyqt5.qtmultimedia depends.
Change-Id: I9177f5a814f884f33ae5378f99cd31975d0c3d4d

--- a/debian/deepin-screenshot/debian/control
+++ b/debian/deepin-screenshot/debian/control
@@ -15,5 +15,6 @@ Depends: ${misc:Depends},
  python-sip,
  python-wnck,
  python-xpybutil,
+ python-pyqt5.qtmultimedia,
  deepin-social-sharing
 Description: Advanced screen shoting tool
