add qml-module-qtquick-dialogs to depends.
Change-Id: I9b73698c1d8e533f3f8ddc1b90d148b5acb181c0

--- a/debian/deepin-screenshot/debian/control
+++ b/debian/deepin-screenshot/debian/control
@@ -16,5 +16,6 @@ Depends: ${misc:Depends},
  python-wnck,
  python-xpybutil,
  python-pyqt5.qtmultimedia,
+ qml-module-qtquick-dialogs,
  deepin-social-sharing
 Description: Advanced screen shoting tool
