--- a/debian/dde-daemon/debian/control
+++ b/debian/dde-daemon/debian/control
@@ -1,7 +1,7 @@
 Source: dde-daemon
 Section: devel
 Priority: extra
-Maintainer: 宋文武 <songwenwu@linuxdeepin.com>
+Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
  dde-go-dbus-factory,
  golang-dlib-dev,
@@ -20,8 +20,9 @@ Build-Depends: debhelper (>= 9),
  libx11-dev,
  libxkbfile-dev,
  libxtst-dev,
- upower,
- libfontconfig-dev,
+ libxfixes-dev,
+ libxcursor-dev,
+ libfontconfig1-dev,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
@@ -30,14 +31,22 @@ Architecture: any
 Depends: ${shlibs:Depends},
  ${misc:Depends},
  acpid,
- bluez,
- xcur2png,
  upower,
- pulseaudio,
- policykit-1-gnome,
+ bluez5 | bluez (>=5.4),
+ grub-themes-deepin,
  network-manager,
+ network-manager-pptp,
+ network-manager-l2tp,
+ network-manager-openconnect,
+ network-manager-openvpn,
+ network-manager-vpnc,
+ xcur2png,
  xserver-xorg-input-wacom,
+ iso-codes,
+ mobile-broadband-provider-info,
+ policykit-1-gnome,
+Conflicts: dde-workspace ( < 2.1+20141028122406 )
 Description: daemon handling the DDE session settings
- This package contains the daemon which is responsible for setting the
- various parameters of a DDE session and the applications that run
- under it.
+    This package contains the daemon which is responsible for setting the
+    various parameters of a DDE session and the applications that run
+    under it. 
