fix deepin-music depends.
Change-Id: I8bb462fd4bc6892fc032ec33c8d31cfd00b70db3

--- a/debian/deepin-music/debian/control
+++ b/debian/deepin-music/debian/control
@@ -9,8 +9,8 @@ Homepage: http://www.linuxdeepin.com/
 Package: deepin-music-player
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends},
-         pyhton-pyqt5.quick, python-peewee,
-         python-pyquery, python-mutagen, python-request,
+         python-pyqt5.qtquick, python-peewee,
+         python-pyquery, python-mutagen, python-requests,
          python-chardet, python-keybinder,
          gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad
 Suggests: gstreamer0.10-plugins-bad-multiverse, python-mmkeys
