--- a/debian/deepin-music/debian/control
+++ b/debian/deepin-music/debian/control
@@ -13,7 +13,8 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
          python-pyquery, python-mutagen, python-requests,
          python-chardet, python-keybinder, python-leveldb,
          python-pycurl, python-faulthandler, liboxideqt-qmlplugin,
-         gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad
+         gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad,
+         gstreamer0.10-plugins-ugly, 
 Suggests: gstreamer0.10-plugins-bad-multiverse, python-mmkeys
 Description: Awesome music player with brilliant and tweakful UI
  Deepin-UI based, gstreamer front-end, with features likes search music by 
