add more depends
Change-Id: I1bcb1a472604fd5c90c1460a23a0a7c2de733816

--- a/debian/deepin-social-sharing/debian/control
+++ b/debian/deepin-social-sharing/debian/control
@@ -13,5 +13,6 @@ Depends: ${shlibs:Depends},
  python-pyqt5,
  python-requests,
  python-requests-oauthlib,
+ qml-module-qtwebkit,
  deepin-qml-widgets,
 Description: System-wide social sharing service for Deepin!
