add dde-workspace alias
Change-Id: I595793a499e1436f3158be3917a69e3c146aec1a

--- a/develop.conf
+++ b/develop.conf
@@ -25,5 +25,9 @@ dest = /srv/package-source/source/unstable/
 [deepin-store]
 upstreamer_branch = develop
 
+[dde-workspace]
+upstreamer_repo = deepin-desktop-environment
+debian_repo = deepin-desktop-environment
+
 [deepin-gtk-theme]
 upstreamer_branch = debian-develop
