add dde-workspace alias
Change-Id: I82d9c9cff66540351bd738a1d300e7f95f8c021e

--- a/develop.conf
+++ b/develop.conf
@@ -25,9 +25,8 @@ dest = /srv/package-source/source/unstable/
 [deepin-store]
 upstreamer_branch = develop
 
-[dde-workspace]
-upstreamer_repo = deepin-desktop-environment
-debian_repo = deepin-desktop-environment
+[deepin-desktop-environment]
+packagename=deepin-desktop-environment
 
 [deepin-gtk-theme]
 upstreamer_branch = debian-develop
