--- a/debian/deepin-desktop-environment/debian/control
+++ b/debian/deepin-desktop-environment/debian/control
@@ -12,7 +12,7 @@ Build-Depends: debhelper (>= 9),
  libgdk-pixbuf2.0-dev,
  libglib2.0-dev,
  libgtk-3-dev,
- liblightdm-gobject-dev,
+ liblightdm-gobject-1-dev | liblightdm-gobject-dev,
  libsqlite3-dev,
  libwebkitgtk-3.0-dev,
  libxtst-dev,
