add fake-node to dde build-deps.
Change-Id: Ie17b561eec71913bc3a6a55d0b4ec0cf04bed5ea

--- a/debian/deepin-desktop-environment/debian/control
+++ b/debian/deepin-desktop-environment/debian/control
@@ -16,6 +16,7 @@ Build-Depends: debhelper (>= 9),
  libsqlite3-dev,
  libwebkitgtk-3.0-dev,
  libxtst-dev,
+ fake-node,
  pkg-config,
  python,
 Standards-Version: 3.9.5
