--- a/debian/deepin-desktop-environment/debian/control
+++ b/debian/deepin-desktop-environment/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Li Longyu (Ai Kotoba) <leaeasy@gmail.com>
 Build-Depends: debhelper (>= 9),
  cmake,
- coffeescript (>> 1.6.2),
+# coffeescript (>> 1.6.2),
  golang-dlib-dev,
  golang-gettext-go-dev,
  golang-go,
