--- a/debian/deepin-desktop-environment/debian/rules
+++ b/debian/deepin-desktop-environment/debian/rules
@@ -15,5 +15,9 @@
 override_dh_auto_configure:
 	dh_auto_configure -- -DCMAKE_BUILD_TYPE=Release
 
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/tmp
+	find debian/tmp -name "*.coffee" -exec rm -f {} \;
+
 override_dh_shlibdeps:
 	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
