--- a/debian/startdde/debian/rules
+++ b/debian/startdde/debian/rules
@@ -15,6 +15,11 @@
 override_dh_shlibdeps:
 	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
 
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/tmp
+        find debian/tmp -name "*.coffee" -exec rm -f {} \;
+
+
 ifdef USE_GCCGO
 override_dh_strip:
 	true
