--- a/debian/startdde/debian/control
+++ b/debian/startdde/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9), cmake, pkg-config, golang-go, coffeescript,
  libwebkitgtk-3.0-dev,
  golang-dlib-dev,
  golang-xgbutil-dev,
- golang-fsnotify-dev,
+ golang-fsnotify.howeyc-dev,
  dde-go-dbus-factory,
  libdeepin-webkit-3.0-0, libgail-3-dev, libgstreamer-plugins-base0.10-dev,
 Standards-Version: 3.9.5
