add deepin-manual to deepin-movie recommends.
Change-Id: I7ba9fa08d0324a9f29c845b437a0959691276fa7

--- a/debian/deepin-movie/debian/control
+++ b/debian/deepin-movie/debian/control
@@ -10,6 +10,7 @@ Package: deepin-movie
 Architecture: all
 Depends: ${shlibs:Depends},
  ${misc:Depends},
+ deepin-manual,
  python-pyqt5.qtquick,
  mediainfo,
  qml-module-qtav,
