fix deepin-manual depends
Change-Id: Iacab2373bf20fd39b679b02faa44d09dcd474e0e

--- a/debian/deepin-movie/debian/control
+++ b/debian/deepin-movie/debian/control
@@ -10,7 +10,6 @@ Package: deepin-movie
 Architecture: all
 Depends: ${shlibs:Depends},
  ${misc:Depends},
- deepin-manual,
  python-pyqt5.qtquick,
  mediainfo,
  qml-module-qtav,
@@ -23,5 +22,6 @@ Depends: ${shlibs:Depends},
  python-peewee,
  deepin-menu,
  deepin-qml-widgets,
+Recommends: deepin-manual,
 Description: deepin movie for linuxdeepin desktop environment
  Deepin movie with linuxdeepin desktop environment.
