add dleyna-renderer to deepin-movie depends
Change-Id: I0a400267d51664d69bdf9aee285431529d8cb356

--- a/debian/deepin-movie/debian/control
+++ b/debian/deepin-movie/debian/control
@@ -22,6 +22,7 @@ Depends: ${shlibs:Depends},
  python-peewee,
  deepin-menu,
  deepin-qml-widgets,
+ dleyna-renderer,
 Recommends: deepin-manual,
 Description: deepin movie for linuxdeepin desktop environment
  Deepin movie with linuxdeepin desktop environment.
