--- a/debian/go-dlib/debian/control
+++ b/debian/go-dlib/debian/control
@@ -3,7 +3,7 @@ Section: devel
 Priority: extra
 Maintainer: Yueqian Zhang <zhangyueqian@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
-               golang-xgb-dev, golang-fsnotify-dev,
+               golang-xgb-dev, golang-fsnotify.howeyc-dev,
 	       golang-gocheck-dev,
 	       golang-goconvey-dev,
                libpulse-dev,
@@ -13,7 +13,7 @@ Homepage: http://www.linuxdeepin.com
 
 Package: golang-dlib-dev
 Architecture: all
-Depends: ${misc:Depends}, golang-xgb-dev, golang-fsnotify-dev,
+Depends: ${misc:Depends}, golang-xgb-dev, golang-fsnotify.howeyc-dev,
          libpulse-dev, libgtk-3-dev
 Built-Using: ${misc:Built-Using}
 Provides: go-dlib
