add deepin-nautilus-properties to depends
Change-Id: I99b263dcd0af2c6d910fb813224faff84a3e7ec1

--- a/debian/deepin-desktop-environment/debian/control
+++ b/debian/deepin-desktop-environment/debian/control
@@ -24,18 +24,18 @@ Homepage: http://www.linuxdeepin.com
 
 Package: deepin-desktop-environment
 Architecture: any
-Depends: ${misc:Depends},
-         startdde,
-         dde-control-center,
-         dde-dock-applets,
+Depends: ${misc:Depends},dde-workspace
 Description: Meta Package for Deepin Desktop Environment
 
 Package: dde-workspace
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
+         dde-dock-applets,
          deepin-menu,
          libdeepin-webkit-3.0-0,
+         deepin-nautilus-properties,
+         startdde,
          dde-daemon,
          dde-control-center,
          lightdm,
