--- a/develop.conf
+++ b/develop.conf
@@ -25,7 +25,7 @@ dest = /srv/package-source/source/unstable/
 [deepin-store]
 upstreamer_branch = develop
 
-[deepin-desktop-environment]
+[dde-workspace]
 packagename=deepin-desktop-environment
 
 [deepin-gtk-theme]
