--- a/develop.conf
+++ b/develop.conf
@@ -30,3 +30,6 @@ packagename=deepin-desktop-environment
 
 [deepin-gtk-theme]
 upstreamer_branch = debian-develop
+
+[deepin-mutter]
+base_version = 3.14.2
