--- a/debian/deepin-manual/debian/control
+++ b/debian/deepin-manual/debian/control
@@ -16,4 +16,4 @@ Architecture: all
 Description: Deepin Manual
 Depends:
  python3-dae, python3-gi, python3-jieba, deepin-qml-widgets,
- python3-pyqt5.qtwebkit
+ python3-pyqt5.qtwebkit, python3-pyqt5.qtquick,
