fix deepin-screenshot depends.
Change-Id: Ieb1d0edc279e99ba726b9af7dd1354c7ca4579d5

--- a/debian/deepin-screenshot/debian/control
+++ b/debian/deepin-screenshot/debian/control
@@ -16,6 +16,11 @@ Depends: ${misc:Depends},
  python-wnck,
  python-xpybutil,
  python-pyqt5.qtmultimedia,
+ python-pyqt5.qtquick,
+ python-gtk2,
+ python-xpybutil,
  qml-module-qtquick-dialogs,
- deepin-social-sharing
+ deepin-social-sharing,
+ deepin-menu,
+ deepin-qml-widgets,
 Description: Advanced screen shoting tool
