change deepin-movie default branch
Change-Id: Ib7b8b20546aa7c0e80408c95f95953666b014158

--- a/develop.conf
+++ b/develop.conf
@@ -30,3 +30,6 @@ packagename=deepin-desktop-environment
 
 [deepin-gtk-theme]
 upstreamer_branch = debian-develop
+
+[deepin-movie]
+upstreamer_branch = debian
