--- a/debian/deepin-installer/debian/control
+++ b/debian/deepin-installer/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper (>= 8.0.0),
  golang-fsnotify-dev,
  libdbus-glib-1-dev,
  libdeepin-webkit-3.0-0,
- liblightdm-gobject-dev,
+ liblightdm-gobject-dev | liblightdm-gobject-1-dev,
  libparted-dev,
  libsqlite3-dev,
  dde-go-dbus-factory,
