--- a/develop.conf
+++ b/develop.conf
@@ -3,8 +3,8 @@ upstreamer_basedir = /home/leaeasy/debian-develop/
 debian_basedir = /home/leaeasy/deepin.dsc/debian/
 dist = unstable
 default_arch = amd64
-default_branch = release/*
-debian_branch = release
+default_branch = develop
+debian_branch = debian
 notify = 0
 base_version = 15.04
 
@@ -16,14 +16,20 @@ room_id = builder
 host = unstable
 
 [upload]
-host = release
+host = unstable
 
 [source]
 method=cp 
 dest = /srv/package-source/source/unstable/
 
+[deepin-store]
+upstreamer_branch = develop
+
 [dde-workspace]
 packagename=deepin-desktop-environment
 
+[deepin-gtk-theme]
+upstreamer_branch = debian-develop
+
 [deepin-movie]
-upstreamer_branch = release/2.2.2
+upstreamer_branch = debian
