--- a/develop.conf
+++ b/develop.conf
@@ -4,7 +4,6 @@ debian_basedir = /home/leaeasy/deepin.dsc/debian/
 dist = unstable
 default_arch = amd64
 default_branch = develop
-debian_branch = debian
 notify = 0
 base_version = 15.04
 
@@ -12,10 +11,7 @@ base_version = 15.04
 token = 8d4dfb5c6fe33794777101c023d8a4
 room_id = builder
 
-[package]
-host = unstable
-
-[upload]
+[repo]
 host = unstable
 
 [source]
