--- a/builder.conf
+++ b/builder.conf
@@ -1,1 +1,39 @@
-develop.conf
+[build]
+upstreamer_basedir = /home/leaeasy/debian-develop/
+debian_basedir = /home/leaeasy/deepin.dsc/
+dist = unstable
+default_arch = amd64
+default_branch = develop
+notify = 0
+base_version = 15.04
+json_config = branchs.json
+
+[hipchat]
+token = 8d4dfb5c6fe33794777101c023d8a4
+room_id = builder
+
+[repo]
+host = unstable
+
+[source]
+method=cp 
+dest = /srv/package-source/source/unstable/
+
+[deepin-compiz]
+packagename = deepin-music
+upstreamer_branch = master
+
+[deepin-store]
+upstreamer_branch = develop
+
+[deepin-gtk-theme]
+upstreamer_branch = master
+
+[qtav]
+upstreamer_branch=master
+
+[deepin-desktop-environment]
+depends_on = [ 'go-dlib' 'dde-api' ]
+
+[dde-api]
+depends_on = [ 'go-dlib' ]
