--- a/builder.conf
+++ b/builder.conf
@@ -1,7 +1,7 @@
 [build]
 upstreamer_basedir = /home/leaeasy/debian-develop/
 debian_basedir = /home/leaeasy/deepin.dsc/
-dist = unstable
+dist = experimental
 default_arch = amd64
 default_branch = develop
 notify = 0
@@ -13,7 +13,7 @@ token = 8d4dfb5c6fe33794777101c023d8a4
 room_id = builder
 
 [repo]
-host = unstable
+host = experimental
 
 [source]
 method=cp 
