re-adjust branch for deepin-manual
Change-Id: I2c6ed35ee547f13245c93738ed3c2268b4bcb51d

--- a/builder.conf
+++ b/builder.conf
@@ -16,7 +16,7 @@ room_id = builder
 host = experimental
 
 [source]
-method=cp 
+method=cp
 dest = /srv/package-source/source/experimental/
 
 [deepin-compiz]
@@ -31,6 +31,9 @@ upstreamer_branch = master
 
 [qtav]
 upstreamer_branch=master
+
+[deepin-manual]
+upstreamer_branch=release/1.0
 
 [deepin-desktop-environment]
 depends_on = [ 'go-dlib' 'dde-api' ]
