reset branch for deepin-manual
Change-Id: I90fa89e48f8ffc41a01fc4892eb0427a3a1cf4d4

--- a/builder.conf
+++ b/builder.conf
@@ -30,10 +30,7 @@ upstreamer_branch = develop
 upstreamer_branch = master
 
 [qtav]
-upstreamer_branch=master
-
-[deepin-manual]
-upstreamer_branch=release/1.0
+upstreamer_branch = master
 
 [deepin-desktop-environment]
 depends_on = [ 'go-dlib' 'dde-api' ]
