--- a/deepin-music/debian/control
+++ b/deepin-music/debian/control
@@ -2,21 +2,20 @@ Source: deepin-music
 Section: sound
 Priority: extra
 Maintainer: Li Longyu <leaeasy@gmail.com>
-Build-Depends: debhelper (>= 9), python
-Standards-Version: 3.9.5
+Build-Depends: debhelper (>= 8.0.0), python
+Standards-Version: 3.9.2
 Homepage: http://www.linuxdeepin.com/
 
 Package: deepin-music
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends},
-         python-pyqt5.qtquick, python-peewee,
-         python-pyquery, python-mutagen, python-requests,
-         python-chardet, python-keybinder, python-leveldb,
-         python-pycurl, python-faulthandler, liboxideqt-qmlplugin,
-         gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad,
-         gstreamer0.10-plugins-ugly, 
-Conflicts: deepin-music-player
-Suggests: gstreamer0.10-plugins-bad-multiverse, python-mmkeys
+         deepin-ui, python-mutagen,
+         python-gst0.10, python-pyquery, python-cddb,
+         python-pycurl, python-chardet, python-keybinder,
+         gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad
+Suggests: python-mmkeys,
+          gstreamer0.10-plugins-ugly,
+          gstreamer0.10-plugins-bad-multiverse,
 Description: Awesome music player with brilliant and tweakful UI
  Deepin-UI based, gstreamer front-end, with features likes search music by 
  pinyin,quanpin, colorful lyrics supports, and more powerfull functions you 
