add nocache to deepin-installer deps.
Change-Id: I29bde3344b10823c5e907fd7a350d10e8cd90c0a

--- a/deepin-installer/debian/control
+++ b/deepin-installer/debian/control
@@ -25,6 +25,7 @@ Package: deepin-installer
 Architecture: any
 Depends: ${shlibs:Depends}, libdeepin-webkit-3.0-0,
  ${misc:Depends},
+ nocache,
  btrfs-tools,
  dosfstools,
  e2fsprogs,
