--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -15,6 +15,7 @@ Build-Depends: debhelper (>= 9),
  libudev-dev,
  libglib2.0-dev,
  libgtk-3-dev,
+ golang-kingpin.v2-dev,
  libgtk2.0-dev,
  libxi-dev,
  libx11-dev,
