--- a/builder.conf
+++ b/builder.conf
@@ -4,6 +4,7 @@ debian_basedir = /home/leaeasy/deepin.dsc
 dist = trusty
 default_arch = amd64
 notify = 0
+tag_version = 0
 json_config = branchs.json
 
 [repo]
