--- a/deepin-music/debian/control
+++ b/deepin-music/debian/control
@@ -13,9 +13,9 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
          python-gst0.10, python-pyquery, python-cddb,
          python-pycurl, python-chardet, python-keybinder,
          gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad
-Suggests: python-mmkeys,
-          gstreamer0.10-plugins-ugly,
-          gstreamer0.10-plugins-bad-multiverse,
+         gstreamer0.10-plugins-ugly,
+         gstreamer0.10-plugins-bad-multiverse,
+         python-mmkeys,
 Description: Awesome music player with brilliant and tweakful UI
  Deepin-UI based, gstreamer front-end, with features likes search music by 
  pinyin,quanpin, colorful lyrics supports, and more powerfull functions you 
