--- a/go-dlib/debian/rules
+++ b/go-dlib/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-export DH_GOPKG := pkg.linuxdeepin.com/lib
+export DH_GOPKG := pkg.deepin.io/lib
 export DH_GOLANG_INSTALL_ALL := 1
 
 %:
