add tag version
Change-Id: Id687aac68f3a31e3bea8724c88955a33c0cff448

--- a/builder.conf
+++ b/builder.conf
@@ -6,6 +6,7 @@ default_arch = amd64
 default_branch = develop
 notify = 0
 base_version = 15.04
+tag_version = 1
 json_config = branchs.json
 
 [hipchat]
