--- a/dbus-factory/debian/control
+++ b/dbus-factory/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
 Package: dde-go-dbus-factory
-Architecture: any
+Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Go-lang dbus gen for dlib
  Go-lang dubs gen for dlib
