add deepin-remote-assistance to depends
Change-Id: I3d5de13b69c81c68ec435949361e9e903e66bd00

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -26,6 +26,7 @@ Depends: ${shlibs:Depends},
  dde-api,
  dde-qml-dbus-factory,
  deepin-artwork-themes,
+ deepin-remote-assistance,
  deepin-qml-widgets,
  qt5-extra,
  libqt5svg5,
