--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -19,6 +19,7 @@ Depends: ${shlibs:Depends},
  ${misc:Depends},
  dde-daemon (>= 0.0.1+20140731174758),
  dde-workspace,
+ gvfs-bin,
  deepin-wm | deepin-compiz | compiz,
 Conflicts: deepin-session
 Description: starter of deepin desktop environment
