add libgnome2-bin to depends.
Change-Id: I851a87444b3ff1fe457a58f3f7a49a5054a11607

--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -20,6 +20,7 @@ Depends: ${shlibs:Depends},
  dde-daemon (>= 0.0.1+20140731174758),
  dde-workspace,
  gvfs-bin,
+ libgnome2-bin,
  deepin-wm | deepin-compiz | compiz,
 Conflicts: deepin-session
 Description: starter of deepin desktop environment
