--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9),
  golang-xgb-dev,
  golang-xgbutil-dev,
  libxi-dev,
- golang-golang-x-image-dev,
+ golang-imaging.disintegration-dev,
  libcanberra-dev
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
