--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -9,7 +9,11 @@ Build-Depends: debhelper (>= 9),
  golang-xgbutil-dev,
  libxi-dev,
  golang-imaging.disintegration-dev,
- libcanberra-dev
+ libcanberra-dev,
+ librsvg2-dev,
+ libgtk-3-dev,
+ libgdk-pixbuf2.0-dev,
+ libcairo2-dev
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
