--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -24,6 +24,7 @@ Build-Depends: debhelper (>= 9),
  libxfixes-dev,
  libxcursor-dev,
  libfontconfig1-dev,
+ dde-api,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
