--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -11,6 +11,7 @@ Build-Depends: debhelper (>= 9),
  golang-imaging.disintegration-dev,
  libcanberra-dev,
  librsvg2-dev,
+ golang-kingpin.v2-dev,
  libgtk-3-dev,
  libgdk-pixbuf2.0-dev,
  libcairo2-dev
