--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -12,6 +12,7 @@ Build-Depends: debhelper (>= 9),
  libcanberra-dev,
  librsvg2-dev,
  golang-kingpin.v2-dev,
+ libmetacity-dev,
  libgtk-3-dev,
  libgdk-pixbuf2.0-dev,
  libcairo2-dev
