add depends dde-qml-dbus-factory for deepin-movie
Change-Id: Ifc6cd4724f357a94246178ab909b231ef1c5f9f5

--- a/deepin-movie/debian/control
+++ b/deepin-movie/debian/control
@@ -23,6 +23,7 @@ Depends: ${shlibs:Depends},
  deepin-menu,
  deepin-qml-widgets,
  dleyna-renderer,
+ dde-qml-dbus-factory,
 Recommends: deepin-manual,
 Description: deepin movie for linuxdeepin desktop environment
  Deepin movie with linuxdeepin desktop environment.
