--- a/deepin-music/debian/control
+++ b/deepin-music/debian/control
@@ -15,8 +15,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
          gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad
          gstreamer0.10-plugins-ugly,
          gstreamer0.10-plugins-bad-multiverse,
-         python-mmkeys,
-	 python-javascriptcore,deepin-samples,
+         python-mmkeys,dmusic-plugin-baidumusic,deepin-samples,
 Description: Awesome music player with brilliant and tweakful UI
  Deepin-UI based, gstreamer front-end, with features likes search music by 
  pinyin,quanpin, colorful lyrics supports, and more powerfull functions you 
