--- a/dbus-factory/debian/rules
+++ b/dbus-factory/debian/rules
@@ -9,3 +9,6 @@ export QT5_LIBDIR := /usr/lib/$(shell dpkg-architecture -qDEB_HOST_MULTIARCH)/qt
 override_dh_auto_install:
 	make DESTDIR=$(CURDIR)/debian/dde-go-dbus-factory  install-golang
 	make DESTDIR=$(CURDIR)/debian/dde-qml-dbus-factory install-qml
+
+override_dh_strip:
+	dh_strip --dbg-package=dde-qml-dbus-factory-dbg
