--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -22,7 +22,7 @@ Depends: ${shlibs:Depends},
  dde-account-faces,
  dde-daemon,
  dde-api,
- dde-qml-dbus-factory,
+ dde-qml-dbus-factory(>= 0.6.1),
  deepin-artwork-themes,
  deepin-qml-widgets,
  qml-module-qtqml-models2,
