--- a/dde-dock-applets/debian/rules
+++ b/dde-dock-applets/debian/rules
@@ -1,4 +1,17 @@
 #!/usr/bin/make -f
 
+export BUILD_DEBUG = true
+CFLAGS = -Wall -g
+DH_VERBOSE = 1
+
+ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
+	CFLAGS += -O0
+else
+	CFLAGS += -O2
+endif
+
 %:
 	dh $@
+
+override_dh_strip:
+	dh_strip --dbg-package=dde-dock-applets-dbg
