--- a/deepin-desktop-environment/debian/control
+++ b/deepin-desktop-environment/debian/control
@@ -1,7 +1,9 @@
 Source: deepin-desktop-environment
 Section: utils
 Priority: extra
-Maintainer: Li Longyu (Ai Kotoba) <leaeasy@gmail.com>
+Maintainer: Li Longyu <leaeasy@gmail.com>
+Standards-Version: 3.9.5
+Homepage: http://www.linuxdeepin.com
 Build-Depends: debhelper (>= 9),
  cmake,
 # coffeescript (>> 1.6.2),
@@ -19,13 +21,12 @@ Build-Depends: debhelper (>= 9),
  fake-node,
  pkg-config,
  python,
-Standards-Version: 3.9.5
-Homepage: http://www.linuxdeepin.com
 
 Package: deepin-desktop-environment
 Architecture: any
 Depends: ${misc:Depends},dde-workspace
 Description: Meta Package for Deepin Desktop Environment
+ Meta Package for Deepin Desktop Environment
 
 Package: dde-workspace
 Architecture: any
@@ -35,8 +36,12 @@ Depends: ${shlibs:Depends},
          deepin-menu,
          libdeepin-webkit-3.0-0,
          deepin-nautilus-properties,
-         startdde,
-         dde-daemon,
-         dde-control-center,
+         startdde(>= 2.91.0),
+         dde-daemon(>= 2.92.1),
+         deepin-desktop-schemas,
          lightdm,
+Recommends: dde-control-center
 Description: deepin desktop envrionment for Linuxdeepin new desktop environment.
+ deepin desktop envrionment for Linuxdeepin new desktop environment.
+ .
+ Include: desktop, dock, launcher, lightdm-greeter
