--- a/deepin-installer/debian/control
+++ b/deepin-installer/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 8.0.0),
  liblightdm-gobject-dev | liblightdm-gobject-1-dev,
  libparted-dev,
  libsqlite3-dev,
- dde-go-dbus-factory,
+ dde-go-dbus-factory(>= 0.6.1),
  libwebkitgtk-3.0-dev,
  libxklavier-dev,
  pkg-config,
