--- a/deepin-music/debian/control
+++ b/deepin-music/debian/control
@@ -8,16 +8,14 @@ Homepage: http://www.linuxdeepin.com/
 
 Package: deepin-music
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends},
-         deepin-ui, python-mutagen,
-         python-gst0.10, python-pyquery, python-cddb,
-         python-pycurl, python-chardet, python-keybinder,
-         gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad,
-         gstreamer0.10-plugins-ugly,
-         python-mmkeys,
+Depends: ${misc:Depends}, deepin-ui, python-mutagen,
+ python-gst0.10, python-pyquery, python-cddb,
+ python-pycurl, python-chardet, python-keybinder,
+ gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad,
+ gstreamer0.10-plugins-ugly, python-mmkeys,
 Description: Awesome music player with brilliant and tweakful UI
- Deepin-UI based, gstreamer front-end, with features likes search music by 
- pinyin,quanpin, colorful lyrics supports, and more powerfull functions you 
- will found.
+ Deepin-UI based, gstreamer front-end, with features likes search music 
+ by pinyin,quanpin, colorful lyrics supports, and more powerful
+ functions you will found.
  .
  Just enjoy it! have fun!
