--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -21,13 +21,25 @@ Homepage: http://www.linuxdeepin.com
 
 Package: dde-api
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends},
+Depends: ${shlibs:Depends}, ${misc:Depends}, rfkill
 Description: Go-lang bingdings for dde-daemon
  Go-lang bindings for dde-daemon
 
 Package: dde-api-dev
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends},
+ golang-dlib-dev,
+ golang-xgb-dev,
+ golang-xgbutil-dev,
+ libxi-dev,
+ golang-imaging.disintegration-dev,
+ libcanberra-dev,
+ librsvg2-dev,
+ golang-kingpin.v2-dev,
+ libmetacity-dev,
+ libgtk-3-dev,
+ libgdk-pixbuf2.0-dev,
+ libcairo2-dev
 Description: Go-lang bingdings for dde-daemon
  Go-lang bindings for dde-daemon -- dev file
 
