add libdouble-conversion-dev to build depends
Change-Id: I6cd2827e321a7cf8bc5db63d3d9d80d3275e6f0a

--- a/deepin-gettext-tools/debian/control
+++ b/deepin-gettext-tools/debian/control
@@ -2,9 +2,10 @@ Source: deepin-gettext-tools
 Section: devel
 Priority: extra
 Build-Depends: debhelper (>= 9),
-               qt5-default, qt5-qmake,
-               qtbase5-private-dev,
-               qtdeclarative5-private-dev
+ qt5-default, qt5-qmake,
+ libdouble-conversion-dev,
+ qtbase5-private-dev,
+ qtdeclarative5-private-dev
 Standards-Version: 3.9.5
 Maintainer: 宋文武 <songwenwu@linuxdeepin.com>
 
