--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -23,6 +23,7 @@ Build-Depends: debhelper (>= 9),
  libxtst-dev,
  libxfixes-dev,
  libxcursor-dev,
+ golang-imaging.disintegration-dev,
  libfontconfig1-dev,
  dde-api-dev,
 Standards-Version: 3.9.5
