dde-api: add dependencies for thumbnails
added dependencies:
- freetype2
- poppler-glib

Change-Id: Id047b8235bc7cf720e2990d8286a9b38848d249d

--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -15,7 +15,9 @@ Build-Depends: debhelper (>= 9),
  libmetacity-dev,
  libgtk-3-dev,
  libgdk-pixbuf2.0-dev,
- libcairo2-dev
+ libcairo2-dev,
+ libfreetype6-dev,
+ libpoppler-glib-dev
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
@@ -39,7 +41,9 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  libmetacity-dev,
  libgtk-3-dev,
  libgdk-pixbuf2.0-dev,
- libcairo2-dev
+ libcairo2-dev,
+ libfreetype6-dev,
+ libpoppler-glib-dev
 Description: Go-lang bingdings for dde-daemon
  Go-lang bindings for dde-daemon -- dev file
 
