--- a/deepin-desktop-environment-launcher/debian/control
+++ b/deepin-desktop-environment-launcher/debian/control
@@ -1,4 +1,4 @@
-Source: deepin-launcher-environment-launcher
+Source: deepin-desktop-environment-launcher
 Section: deepin
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
@@ -8,8 +8,8 @@ Build-Depends: debhelper (>= 8.0.0), pkg-config,
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
 
-Package: deepin-launcher-environment-launcher
+Package: deepin-desktop-environment-launcher
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: deepin desktop-environment - desktop module
- Deepin desktop environment 2015 - desktop module.
+Description: deepin desktop-environment - launcher module
+ Deepin desktop environment 2015 - launcher module.
