--- a/deepin-desktop-environment-dock/debian/control
+++ b/deepin-desktop-environment-dock/debian/control
@@ -1,5 +1,5 @@
 Source: deepin-desktop-environment-dock
-Section: deepin
+Section: testing/deepin
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config, 
@@ -12,5 +12,6 @@ Homepage: http://www.deepin.org/
 Package: deepin-desktop-environment-dock
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Conflicts: dde-workspace (<< 2.90.5)
 Description: deepin desktop-environment - dock module
  Deepin desktop environment 2015 - dock module.
