add deepin-file-manager-backend to depends.
Change-Id: Icb45c68acd21c0abe92c3e4c639ab1153a6f3c6d

--- a/deepin-desktop-environment-desktop/debian/control
+++ b/deepin-desktop-environment-desktop/debian/control
@@ -10,7 +10,8 @@ Homepage: http://www.deepin.org/
 
 Package: deepin-desktop-environment-desktop
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ deepin-file-manager-backend,
 Conflicts: dde-workspace (<< 2.90.5)
 Description: deepin desktop-environment - desktop module
  Deepin desktop environment 2015 - desktop module.
