add dde-control-center master branch.
Change-Id: I715450986765633af726075c0ce122ef915e57ad

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -5,13 +5,14 @@ Maintainer:  Li Longyu (Ai Kotoba) <leaeasy@gmail.com>
 Build-Depends: debhelper (>= 9),
  pkg-config,
  libx11-dev,
- libxtst-dev,
+# libxtst-dev,
  qt5-qmake,
  qt5-default,
  qtdeclarative5-dev,
- libqt5webkit5-dev,
- libgtk2.0-dev,
+# libqt5webkit5-dev,
+# libgtk2.0-dev,
  deepin-gettext-tools,
+ deepin-desktop-environment-dock-dev,
 Standards-Version: 3.9.5
 Homepage: http://gitcafe.com/Deepin/dde-control-center.git
 
@@ -22,12 +23,7 @@ Depends: ${shlibs:Depends},
  dde-account-faces,
  dde-daemon,
  dde-api,
- dde-qml-dbus-factory(>= 0.6.1),
  deepin-artwork-themes,
- deepin-qml-widgets,
- qml-module-qtqml-models2,
- qml-module-qtmultimedia,
- libqt5svg5,
  xkb-data,
  tzdata-l10n,
 Description: New control center for linux deepin
