--- a/deepin-desktop-environment-dock/debian/control
+++ b/deepin-desktop-environment-dock/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config, 
  qt5-qmake, qt5-default,
+ libgtk2.0-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev,
  libxcb-damage0-dev, libqt5svg5-dev
 Standards-Version: 3.9.4
