--- a/dde-dock/debian/control
+++ b/dde-dock/debian/control
@@ -1,4 +1,4 @@
-Source: deepin-desktop-environment-dock
+Source: dde-dock
 Section: testing/deepin
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
@@ -10,14 +10,14 @@ Build-Depends: debhelper (>= 8.0.0), pkg-config,
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
 
-Package: deepin-desktop-environment-dock
+Package: dde-dock
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: dde-workspace (<< 2.90.5)
 Description: deepin desktop-environment - dock module
  Deepin desktop environment 2015 - dock module.
 
-Package: deepin-desktop-environment-dock-dev
+Package: dde-dev
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: deepin desktop-environment - dock module development files
