--- a/dde-launcher/debian/control
+++ b/dde-launcher/debian/control
@@ -1,4 +1,4 @@
-Source: deepin-desktop-environment-launcher
+Source: dde-launcher
 Section: testing/deepin
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 8.0.0), pkg-config,
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
 
-Package: deepin-desktop-environment-launcher
+Package: dde-launcher
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: dde-workspace (<< 2.90.5)
