--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -5,14 +5,11 @@ Maintainer:  Li Longyu (Ai Kotoba) <leaeasy@gmail.com>
 Build-Depends: debhelper (>= 9),
  pkg-config,
  libx11-dev,
-# libxtst-dev,
  qt5-qmake,
  qt5-default,
  qtdeclarative5-dev,
-# libqt5webkit5-dev,
-# libgtk2.0-dev,
  deepin-gettext-tools,
- deepin-desktop-environment-dock-dev,
+ dde-dock-dev,
 Standards-Version: 3.9.5
 Homepage: http://gitcafe.com/Deepin/dde-control-center.git
 
