--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -10,6 +10,7 @@ Build-Depends: debhelper (>= 9),
  qtdeclarative5-dev,
  deepin-gettext-tools,
  dde-dock-dev,
+ libdui-dev,
 Standards-Version: 3.9.5
 Homepage: http://gitcafe.com/Deepin/dde-control-center.git
 
