add qtmultimedia5-dev to dde-control-center

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -11,6 +11,7 @@ Build-Depends: debhelper (>= 9),
  deepin-gettext-tools,
  dde-dock-dev,
  libdui-dev (>> 1.1),
+ qtmultimedia5-dev,
 Standards-Version: 3.9.5
 Homepage: http://gitcafe.com/Deepin/dde-control-center.git
 
