--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -23,7 +23,8 @@ Homepage: http://www.linuxdeepin.com
 
 Package: dde-api
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, rfkill
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ rfkill, locales, libcanberra-pulse,
 Description: Go-lang bingdings for dde-daemon
  Go-lang bindings for dde-daemon
 
