--- a/deepin-metacity/debian/control
+++ b/deepin-metacity/debian/control
@@ -21,6 +21,7 @@ Build-Depends: cdbs (>= 0.4.41),
                libpango1.0-dev (>= 1.2.0),
                libsm-dev,
                libstartup-notification0-dev (>= 0.7),
+               gnome-common,
                libx11-dev,
                libxcomposite-dev (>= 1:0.2),
                libxcursor-dev,
