--- a/dde-dock/debian/control
+++ b/dde-dock/debian/control
@@ -6,7 +6,8 @@ Build-Depends: debhelper (>= 8.0.0), pkg-config,
  qt5-qmake, qt5-default,
  libgtk2.0-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev,
- libxcb-damage0-dev, libqt5svg5-dev
+ libxcb-damage0-dev, libqt5svg5-dev,
+ libdui-dev
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
 
