split lastore-daemon packages.
Change-Id: I39633bd8316af1e856943e2227725a4f22154479

--- a/lastore-daemon/debian/control
+++ b/lastore-daemon/debian/control
@@ -15,3 +15,11 @@ Depends: ${shlibs:Depends},
 Conflicts: deepin-session
 Description: daemon of lastore
  support dbus interface
+
+Package: lastore-daemon-dev
+Architecture: all
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ lastore-daemon (= ${binary:Version})
+Conflicts: deepin-session
+Description: daemon of lastore - development files.
+ support dbus interface - development files.
