--- a/deepin-file-manager/debian/control
+++ b/deepin-file-manager/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 9),
  golang-go,
  libglib2.0-dev,
  libgtk-3-dev,
+ golang-go-sqlite3-dev,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
