--- a/deepin-file-manager/debian/control
+++ b/deepin-file-manager/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 9),
  libglib2.0-dev,
  libgtk-3-dev,
  golang-go-sqlite3-dev,
+ dde-api-dev,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
