add libqt5multimedia5-plugins to depends.
Change-Id: Icfdbaa8481caca55ecfb16121e084757dfb80bc0

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -23,6 +23,7 @@ Depends: ${shlibs:Depends},
  dde-daemon,
  dde-api,
  deepin-artwork-themes,
+ libqt5multimedia5-plugins,
  xkb-data,
  tzdata-l10n,
 Description: New control center for linux deepin
