fix some recommends.
Change-Id: I25bf5aace93a0a7d75f4618f50228dcfda761146

--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -15,6 +15,7 @@ Homepage: http://github.com/linuxdeepin/startdde
 
 Package: startdde
 Architecture: any
+Provides: x-session-manager
 Depends: ${shlibs:Depends},
  ${misc:Depends},
  dde-daemon (>= 2.92.2),
