--- a/deepin-metacity/debian/control
+++ b/deepin-metacity/debian/control
@@ -47,8 +47,8 @@ Depends: dde-daemon,
          ${misc:Depends},
          ${shlibs:Depends}
 Provides: x-window-manager
-Recommends: gnome-session | x-session-manager, gnome-themes-standard
-Suggests: gnome-control-center (>= 1:3.4.0), xdg-user-dirs
+Recommends: gnome-themes-standard
+Suggests: xdg-user-dirs
 Description: lightweight GTK+ window manager
  Metacity is a small window manager, using GTK+ to do everything.
  .
@@ -77,10 +77,6 @@ Package: deepin-metacity-common
 Section: misc
 Architecture: all
 Depends: ${misc:Depends}
-Breaks: gnome-accessibility-themes (<< 3.15.90),
-        gnome-themes-standard-data (<< 3.15.90)
-Replaces: gnome-accessibility-themes (<< 3.15.90),
-          gnome-themes-standard-data (<< 3.15.90)
 Description: shared files for the Metacity window manager
  Metacity is a small window manager, using GTK+ to do everything.
  .
