fix libdui-dev to any
Change-Id: Ia6924dc77a58b9b1eb1c97123b68b0954d2171c0

--- a/libdui/debian/control
+++ b/libdui/debian/control
@@ -16,8 +16,8 @@ Description: Deepin graphical user interface library
  
 
 Package: libdui-dev
-Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends},libdui( =${binary:Version})
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libdui( =${binary:Version})
 Description: Deepin graphical user interface library
  DUI is Deepin graphical user interface for deepin desktop development.
  .
