add parallel support.
Change-Id: Ia74dff0e48c830635dc3093bdf36003ff38c50a7

--- a/dde-control-center/debian/rules
+++ b/dde-control-center/debian/rules
@@ -4,7 +4,7 @@ include /usr/share/dpkg/default.mk
 ARCH := $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 
 %:
-	dh $@
+	dh $@ --parallel
 
 ifeq ($(ARCH), alpha)
 override_dh_auto_configure:
