add libqt5svg5-dev to build-deps.
Change-Id: Ib2d360caae29237dbde2db0f0fb0b76d4bcc2066

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -12,6 +12,7 @@ Build-Depends: debhelper (>= 9),
  dde-dock-dev,
  libdui-dev (>> 1.1),
  qtmultimedia5-dev,
+ libqt5svg5-dev,
 Standards-Version: 3.9.5
 Homepage: http://gitcafe.com/Deepin/dde-control-center.git
 
