update to kingpin 2.1.0 build depends.
Change-Id: I4cbfbb174a920bed9d7013de6a85214b6bef80ad

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -14,7 +14,7 @@ Build-Depends: debhelper (>= 9),
  libudev-dev,
  libglib2.0-dev,
  libgtk-3-dev,
- golang-kingpin.v2-dev,
+ golang-kingpin.v2-dev (>= 2.1.0),
  libgtk2.0-dev,
  libxi-dev,
  libx11-dev,
