fix alpha arch configure args.
Change-Id: I82933582436363c1a4c18b4730cf9c9c270385b0

--- a/dde-control-center/debian/rules
+++ b/dde-control-center/debian/rules
@@ -8,5 +8,5 @@ ARCH := $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 
 ifeq ($(ARCH), alpha)
 override_dh_auto_configure:
-	dh_auto_configure -- WITHOUT_MODULE_GRUB=YES
+	dh_auto_configure -- WITH_MODULE_GRUB=NO
 endif
